CO-309: Fix axis labels overlapping issue on solution panel

--- a/components/corespring/line/src/client/styles.less
+++ b/components/corespring/line/src/client/styles.less
@@ -70,7 +70,7 @@
       margin-left: auto;
       margin-right: auto;
       position: relative;
-      padding-top: 30px;
+      margin-top: 30px;
     }
   }
   .solution-panel.panelVisible {
