--- a/components/corespring/point-intercept/src/client/styles.less
+++ b/components/corespring/point-intercept/src/client/styles.less
@@ -47,7 +47,7 @@
       margin-left: auto;
       margin-right: auto;
       position: relative;
-      padding-top: 20px;
+      margin-top: 20px;
     }
     .panel-body {
       padding: 20px 15px 15px 15px;
